--- a/src/css/Landing.css
+++ b/src/css/Landing.css
@@ -11,8 +11,14 @@
 	border-radius: 100px;
 	display: block;
     margin: auto;
-   
+}
 
+
+
+.landing {
+	box-shadow: 2px 2px 5px grey;
+	padding-top: 10px;
+	padding-bottom: 20px;
 }
 
 
